# file-serve

./: .gitignore  Cargo.toml  data.db
backend/: Cargo.toml
backend/src/: db.rs  main.rs
frontend/: index.html  vite.config.js
frontend/src/: api.js  main.jsx
frontend/src/pages/: DownloadPage.jsx
frontend/src/pages/AdminPage/: AdminPage.jsx
frontend/src/pages/NotFound/: NotFound.jsx
src/: db.rs  main.rs
src/routes/: admin.rs  mod.rs  slug.rs
static/: admin.html
tests/: db.rs
