[package]
name = "file-serve"
version = "0.1.0"
edition = "2021"


[dependencies]
# Web serving
actix-web = "4"
actix-files = "0.6"

# Database
rand = "0.9" # for slug generation
rusqlite = { version = "0.36", features = ["bundled", "unlock_notify"] }
uuid = { version = "1", features = ["v4"] }

# Password hasing
rand_core = { version = "0.6", features = ["getrandom"] }  # for OsRng compatible with argon2
argon2 = "0.5"
base64 = "0.21"

# Seralisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
